# MockGPIO

./: CMakeLists.txt  LICENSE  main.cpp
src/: DeviceMock.h  GPIO.h  GPIOI.h  MockGPIO.cpp  MockGPIO.h  Pin.h
src/I2C/: I2C.cpp  I2C.h  I2CI.h
src/SPI/: SPI.h  TLC5940Protocol.h
